I think I fixed the routes bug

--- a/public/404.html
+++ b/public/404.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
       var pathname = window.location.pathname;
       if (pathname !== "/") {
-        window.location.replace("/?" + pathname.substring(1));
+        window.location.replace("/#" + pathname);
       } else {
         window.location.replace("/");
       }
