--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
       var pathname = window.location.pathname;
       if (pathname !== "/") {
-        window.location.replace("/#" + pathname);
+        window.location.replace("/?" + pathname);
       } else {
         window.location.replace("/");
       }
