--- a/404.html
+++ b/404.html
@@ -10,19 +10,19 @@
       var pathname = window.location.pathname;
       switch (pathname) {
         case "/picks":
-          window.location.replace("/?" + pathname);
+          window.location.replace("/?/picks");
           break;
         case "/faq":
-          window.location.replace("/?" + pathname);
+          window.location.replace("/?/faq");
           break;
         case "/blog":
-          window.location.replace("/?" + pathname);
+          window.location.replace("/?/blog");
           break;
         case "/about":
-          window.location.replace("/?" + pathname);
+          window.location.replace("/?/about");
           break;
         case "/dev":
-          window.location.replace("/?" + pathname);
+          window.location.replace("/?/dev");
           break;
       }
       if (pathname == "/") {
