Overhauling the blog section

--- a/public/404.html
+++ b/public/404.html
@@ -8,6 +8,27 @@
   <body>
     <script type="text/javascript">
       var pathname = window.location.pathname;
+      switch (pathname) {
+        case "/picks":
+          window.location.replace("/?" + pathname);
+          break;
+        case "/faq":
+          window.location.replace("/?" + pathname);
+          break;
+        case "/blog":
+          window.location.replace("/?" + pathname);
+          break;
+        case "/blog":
+          window.location.replace("/?" + pathname);
+          break;
+        case "/dev":
+          window.location.replace("/?" + pathname);
+          break;
+      }
+      if (pathname == "/picks") {
+        window.location.replace("/?" + pathname);
+      }
+
       if (pathname !== "/") {
         window.location.replace("/?" + pathname);
       } else {
