Adding new logo to website

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <title>Music Tasting Club</title>
-    <link rel="icon" type="image/png" href="./imgs/logo.png" />
+    <link rel="icon" type="image/png" href="./imgs/MTC_logo.png" />
   </head>
   <body>
     <div id="root"></div>
