--- a/404.html
+++ b/404.html
@@ -15,10 +15,13 @@
         case "/faq":
           window.location.replace("/?" + pathname);
           break;
-        case "/blog":
+        case "/about":
           window.location.replace("/?" + pathname);
           break;
         case "/blog":
+          window.location.replace("/?" + pathname);
+          break;
+        case "/activties":
           window.location.replace("/?" + pathname);
           break;
         case "/dev":
