I renamed Activities to Club, I moved a lot of stuff into Club

--- a/public/404.html
+++ b/public/404.html
@@ -15,13 +15,13 @@
         case "/faq":
           window.location.replace("/?" + pathname);
           break;
-        case "/about":
+        case "/activties":
           window.location.replace("/?" + pathname);
           break;
         case "/blog":
           window.location.replace("/?" + pathname);
           break;
-        case "/activties":
+        case "/exec":
           window.location.replace("/?" + pathname);
           break;
         case "/dev":
