--- a/404.html
+++ b/404.html
@@ -15,13 +15,13 @@
         case "/faq":
           window.location.replace("/?" + pathname);
           break;
-        case "/about":
+        case "/activties":
           window.location.replace("/?" + pathname);
           break;
         case "/blog":
           window.location.replace("/?" + pathname);
           break;
-        case "/activties":
+        case "/exec":
           window.location.replace("/?" + pathname);
           break;
         case "/dev":
