--- a/404.html
+++ b/404.html
@@ -28,9 +28,9 @@
           window.location.replace("/?" + pathname);
           break;
       }
-      if (pathname == "/picks") {
-        window.location.replace("/?" + pathname);
-      }
+      // if (pathname == "/picks") {
+      //   window.location.replace("/?" + pathname);
+      // }
 
       if (pathname !== "/") {
         window.location.replace("/?" + pathname);
